// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.DateTime UU5.Bricks.DateTime - props value 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-3-1 22:29:51
</span>
`;

exports[`UU5.Bricks.DateTime UU5.Bricks.DateTime - props value 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2019-3-1 22:29:51
</span>
`;

exports[`UU5.Bricks.DateTime className 1`] = `
<span
  className="uu5-bricks-date-time my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime controlled 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime controlled 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime controlled 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime controlled 4`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime country 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  1/25/2018, 3:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly 1`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-dateonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly 4`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-dateonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25
</span>
`;

exports[`UU5.Bricks.DateTime default props 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime disabled 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.DateTime disabled 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime disabled 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime disabled 4`] = `
<span
  className="uu5-bricks-date-time uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.DateTime format 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  25. 1. 2018 16:04:19 +02:00 (4/52) 1/4
</span>
`;

exports[`UU5.Bricks.DateTime hidden 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime hidden 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime hidden 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime hidden 4`] = `
<span
  className="uu5-bricks-date-time uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime id 1`] = `
<span
  className="uu5-bricks-date-time"
  id="myId"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime mainAttrs 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime name 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 4`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 5`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 6`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 7`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 8`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 9`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 10`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 11`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 12`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 13`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 14`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 15`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 16`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 17`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 18`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 19`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel 20`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime noIndex 1`] = `
<span
  className="uu5-bricks-date-time uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime noIndex 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime noIndex 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime noIndex 4`] = `
<span
  className="uu5-bricks-date-time uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime pureRender 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime pureRender 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime pureRender 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime pureRender 4`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled 4`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04
</span>
`;

exports[`UU5.Bricks.DateTime selected 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime selected 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime selected 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime selected 4`] = `
<span
  className="uu5-bricks-date-time uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime style 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime style 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime style 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime style 4`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly 1`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-timeonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly 3`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly 4`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-timeonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  15:04:19
</span>
`;

exports[`UU5.Bricks.DateTime timeZone 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 09:34:19
</span>
`;

exports[`UU5.Bricks.DateTime tooltip 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  2018-1-25 15:04:19
</span>
`;
